--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.chillaxown"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -21,11 +21,13 @@ android {
 
 dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:25.4.0'
     implementation 'com.android.support:support-v13:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.android.support:design:28.0.0'
     //firebase storage
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     //firebase database
@@ -37,10 +39,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.revosleap.adapter:SimpleAdapter:1.0.0'
     implementation project(path: ':notifyme')
-
     implementation 'com.wdullaer:materialdatetimepicker:3.6.0'
-
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
 apply plugin: 'com.google.gms.google-services'
