--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.chillaxown"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -25,9 +25,10 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:25.4.0'
     implementation 'com.android.support:support-v13:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    //implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.google.firebase:firebase-auth:16.0.1'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.firebaseui:firebase-ui-database:3.3.0'
     //firebase storage
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     //firebase database
@@ -45,5 +46,10 @@ dependencies {
     implementation project(path: ':notifyme')
     implementation 'com.wdullaer:materialdatetimepicker:3.6.0'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'com.facebook.android:facebook-share:[4,5)'
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
+    implementation "com.android.support:support-media-compat:28.0.0"
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
+    implementation 'me.itangqi.waveloadingview:library:0.3.5'
 }
 apply plugin: 'com.google.gms.google-services'
